--- a/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -22,3 +22,13 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+
+.form-control.invalid input {
+  background: #ffd7d7;
+  border-color: #ff0000;
+}
+
+.form-control.invalid label {
+ color: red;
+}
